--- a/login.html
+++ b/login.html
@@ -54,7 +54,7 @@
     <input type="text" id="username" class="input" placeholder="Username" />
     <input type="password" id="password" class="input" placeholder="Password" />
     <!-- Register button now redirects to register.html -->
-    <button class="button" onclick="window.location.href='Register.html'">Register</button>
+    <button class="button" onclick="window.location.href='register.html'">Register</button>
     <button class="button" onclick="loginUser()">Login</button>
     <p id="message" class="message"></p>
   </div>
