--- a/homepage.html
+++ b/homepage.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Us</title>
+  <title>Register Account</title>
   <style>
     body {
       background-color: #f3f4f6;
@@ -20,7 +20,7 @@
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-      width: 400px;
+      width: 300px;
     }
     .input {
       width: 100%;
@@ -41,17 +41,48 @@
     .button:hover {
       background-color: #2563eb;
     }
+    .message {
+      margin-top: 15px;
+      color: #374151;
+    }
   </style>
 </head>
 <body>
   <div class="container">
-    <h2>Contact Us</h2>
-    <form>
-      <input type="text" class="input" placeholder="Your Name" required />
-      <input type="email" class="input" placeholder="Your Email" required />
-      <textarea class="input" placeholder="Your Message" rows="4" required></textarea>
-      <button type="submit" class="button">Submit</button>
-    </form>
+    <h2>Register Account</h2>
+    <input type="text" id="firstName" class="input" placeholder="First Name" />
+    <input type="text" id="lastName" class="input" placeholder="Last Name" />
+    <input type="text" id="newUsername" class="input" placeholder="Username" />
+    <input type="password" id="newPassword" class="input" placeholder="Password" />
+    <button class="button" onclick="registerAccount()">Register</button>
+    <p id="message" class="message"></p>
   </div>
+
+  <script>
+    function registerAccount() {
+      const firstName = document.getElementById('firstName').value;
+      const lastName = document.getElementById('lastName').value;
+      const username = document.getElementById('newUsername').value;
+      const password = document.getElementById('newPassword').value;
+      const messageElement = document.getElementById('message');
+
+      if (firstName && lastName && username && password) {
+        fetch('http://localhost:3000/register', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ firstName, lastName, username, password })
+        })
+        .then(response => response.json())
+        .then(data => {
+          messageElement.textContent = data.message;
+        })
+        .catch(() => {
+          messageElement.textContent = 'Error connecting to server.';
+        });
+      } else {
+        messageElement.textContent = 'Please fill in all fields.';
+      }
+    }
+  </script>
 </body>
 </html>
