--- a/login.html
+++ b/login.html
@@ -53,14 +53,33 @@
     <h1>Login</h1>
     <input type="text" id="username" class="input" placeholder="Username" />
     <input type="password" id="password" class="input" placeholder="Password" />
-    <!-- Register button now redirects to register.html -->
-    <button class="button" onclick="window.location.href='register.html'">Register</button>
+    <button class="button" onclick="registerUser()">Register</button>
     <button class="button" onclick="loginUser()">Login</button>
     <p id="message" class="message"></p>
   </div>
 
   <script>
-    // Note: database object is removed since we will use LocalStorage on register page for persistent storage
+    function registerUser() {
+      const username = document.getElementById('username').value;
+      const password = document.getElementById('password').value;
+      const messageElement = document.getElementById('message');
+
+      if (username && password) {
+        fetch('/register', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({ username, password })
+        })
+        .then(response => response.json())
+        .then(data => {
+          messageElement.textContent = data.message;
+        });
+      } else {
+        messageElement.textContent = "Please fill in both fields.";
+      }
+    }
 
     function loginUser() {
       const username = document.getElementById('username').value;
@@ -68,12 +87,21 @@
       const messageElement = document.getElementById('message');
 
       if (username && password) {
-        const users = JSON.parse(localStorage.getItem('users')) || {};
-        if (users[username] && users[username] === password) {
-          window.location.href = 'homepage.html';
-        } else {
-          messageElement.textContent = "Invalid username or password.";
-        }
+        fetch('/login', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({ username, password })
+        })
+        .then(response => response.json())
+        .then(data => {
+          if (data.success) {
+            window.location.href = 'homepage.html';
+          } else {
+            messageElement.textContent = data.message;
+          }
+        });
       } else {
         messageElement.textContent = "Please fill in both fields.";
       }
